--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,45 @@
 @import "tailwindcss";
+
+
+.appear span {
+    display: inline-block;
+    opacity: 0;
+    animation: appear 0.8s ease forwards;
+}
+
+.appear span:nth-child(1) {
+    animation-delay: 0.1s;
+}
+
+.appear span:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.appear span:nth-child(3) {
+    animation-delay: 0.3s;
+}
+
+.appear span:nth-child(4) {
+    animation-delay: 0.4s;
+}
+
+.appear span:nth-child(5) {
+    animation-delay: 0.5s;
+}
+
+.appear span:nth-child(6) {
+    animation-delay: 0.6s;
+}
+
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+        transform: translateY(0px) rotate(-5deg) scale(0.7);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0) rotate(0deg) scale(1);
+    }
+}
