--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 .appear span {
     display: inline-block;
     opacity: 0;
-    animation: appear 0.8s ease forwards;
+    animation: appear 0.5s ease forwards;
 }
 
 .appear span:nth-child(1) {
@@ -31,11 +31,15 @@
     animation-delay: 0.6s;
 }
 
+.appear span:nth-child(7) {
+    animation-delay: 0.7s;
+}
+
 
 @keyframes appear {
     0% {
         opacity: 0;
-        transform: translateY(0px) rotate(-5deg) scale(0.7);
+        transform: translateY(0px) rotate(-3deg) scale(0.7);
     }
 
     100% {
